# netorcai-client-cpp

./: .gitignore  .travis.yml  README.md  changelog.md  fix-meson-nix.patch  meson.build
doxygen/: .gitignore  Doxyfile  generate-doxydoc-meson.sh
examples/hello-gl/: README.md  hello-gl.cpp  meson.build
examples/hello-gl/subprojects/: netorcai-client-cpp.wrap
examples/hello-player/: README.md  hello-player.cpp  meson.build
examples/hello-player/subprojects/: nlohmann_json.wrap
src/netorcai-client-cpp/: client.cpp  client.hpp  endian.hpp  error.hpp  json.hpp  message.cpp  message.hpp  version.cpp  version.hpp
subprojects/: .gitignore  nlohmann_json.wrap
test/: client.cpp  error.cpp  message.cpp
